org_unpackaged/unpackaged/objects/Salesforce_Referrals__c.object
<CustomObject>
    <fields>
        <fullName>Business_Job_Title__c</fullName>
        <label>Business/Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code__c</fullName>
        <label>Business Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computer_Type__c</fullName>
        <label>Computer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell PC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Expense_Budget__c</fullName>
        <label>Contractor&apos;s Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Code__c</fullName>
        <label>Cost Center Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Services__c</fullName>
        <label>Description of Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_to_clone_for_Org62_access__c</fullName>
        <label>Individual to clone for Org62 access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Phone__c</fullName>
        <label>Manager Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moble_Phone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moble Phone Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Hire_Ticket_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Hire Ticket Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Buddy__c</fullName>
        <label>Contractor&apos;s Onboarding Buddy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Unit__c</fullName>
        <label>Payment Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Address__c</fullName>
        <label>Personal Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Coverage_Country__c</fullName>
        <label>Primary Coverage Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Fees_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Covering MBO Fee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Salesforce Referrals</relationshipLabel>
        <relationshipName>Salesforce_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Laptop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Laptop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Assests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Assests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Customer_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Customer Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Source_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Source Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Territory__c</fullName>
        <label>Shipping State/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address__c</fullName>
        <label>Shipping Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Budget__c</fullName>
        <label>Total Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <label>Work City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Country__c</fullName>
        <label>Work Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_State_Province__c</fullName>
        <label>Work State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Street_Address__c</fullName>
        <label>Work Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Zip_Postal_Code__c</fullName>
        <label>Work Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Referral_Lead__c</columns>
        <columns>Manager_Email__c</columns>
        <columns>Project_Start_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>Salesforce Referrals</label>
        <queue>Salesforce_Referrals</queue>
        <sharedTo>
            <group>Salesforce_EMs</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SFDC-{00000}</displayFormat>
        <label>Salesforce Referrals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>